# pkhk_ctf

./: .env  Cargo.toml  README.md  db_creation_script.sql  input.css  premade_challenges.sql
.cargo/: config.toml
docs/: INSTALL.md
src/: app.rs  constants.rs  error_template.rs  lib.rs  logging.rs  main.rs  utils.rs
src/components/: challenge.rs  challenge_popup.rs  leaderboard_chart.rs  mod.rs  navbar.rs  toast.rs  utils.rs
src/components/admin/: challenge.rs  event.rs  file.rs  mod.rs  user.rs
src/pages/: challenges.rs  home.rs  leaderboard.rs  login.rs  mod.rs  not_found.rs  register.rs
src/pages/admin/: challenges.rs  events.rs  files.rs  ldap.rs  log.rs  mod.rs  proxmox.rs  site_settings.rs  status.rs  users.rs
src/pages/login/: ldap.rs  mod.rs
src/pages/user/: mod.rs  settings.rs
src/server/: admin.rs  api.rs  auth.rs  backend.rs  db.rs  mod.rs  proxmox.rs
src/server/admin/: api.rs  mod.rs
src/server/proxmox/: admin.rs  mod.rs
style/: input.css
