[package]
name = "pkhk_ctf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0" }
leptos_router = { version = "0.8.0" }
axum = { version = "0.8.0", features = ["macros"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "=0.2.106", optional = true }
icondata = "0.6.0"
leptos-chartistry = { version = "0.2.2" }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
# surrealdb = { version = "2.4.0", features = ["kv-mem"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["mysql", "time", "rust_decimal", "runtime-tokio", "tls-native-tls"], optional = true }
log = "0.4.29"
md5 = "0.8.0"
futures = "0.3.31"
tracing = "0.1.44"
cfg-if = "1.0.4"
argon2 = "0.5.3"
#uuid = { version = "1.19.0", features = ["v4"] }
cookie = "0.18.1"
axum-extra = { version = "0.12.3", features = ["cookie"], optional = true }
axum_session = { version = "0.17.1", optional = true }
axum-login = { version = "0.18.0", optional = true }
axum_session_auth = { version = "0.17.0", optional = true }
async-trait = "0.1.89"
axum_session_sqlx = { version = "0.6.1", features = ["mysql", "tls-native-tls"], optional = true }
thiserror = "2.0.17"
password-hash = { version = "0.5.0", optional = true }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["mysql"], optional = true }
time = { version = "0.3.44", features = ["serde"] }
http = "1.4.0"
tower-sessions = { version = "0.14.0", optional = true }
once_cell = "1.21.3"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
leptos-use = "0.17.0"
rand = { version = "0.9.2", optional = true }
# thaw = "0.5.0-beta"

[features]
hydrate = [
    "leptos/hydrate",
    # "leptos_meta/hydrate", 
    # "leptos_router/hydrate"
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:sqlx",
    "dep:axum-extra",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum-login",
    "dep:axum_session_sqlx",
    "dep:tower-sessions",
    "dep:tower-sessions-sqlx-store",
    "leptos-chartistry/ssr",
    "dep:rand"
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "pkhk_ctf"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "style/main.scss"
tailwind-input-file = "./input.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
